[package]
name = "fuel-faucet"
version = "0.0.0"
edition = "2021"
publish = false
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/faucet"
description = "A token faucet for onboarding fuel users"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.7.4"
axum_static = "1.2.3"
clerk-rs = "0.2.3"
fuel-core-client = "0.22.0"
fuel-tx = "0.43.0"
fuel-types = "0.43.0"
fuels-accounts = "0.54.0"
fuels-core = "0.54.0"
handlebars = "4.5"
hex = "0.4.3"
lazy_static = "1.4"
memoize = "0.4.2"
num-bigint = "0.4"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = [
  "json",
  "rustls-tls-webpki-roots",
], default-features = false }
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = "0.10"
sha256 = "1.1.4"
time = "0.3.34"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = [
  "buffer",
  "limit",
  "load-shed",
  "util",
  "timeout",
] }
tower-http = { version = "0.5.2", features = [
  "fs",
  "cors",
  "trace",
  "set-header",
] }
tower-sessions = "0.11.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
fuel-core = { version = "0.22.0", default-features = false }
fuel-core-txpool = "0.22.0"
fuel-crypto = "0.43.0"
fuel-types = { version = "0.43.0", features = ["random"] }
futures = "0.3"
insta = "1.14"
rand = "0.8"
tokio = { version = "1.0", features = ["test-util"] }

[build-dependencies]
minify-html = "0.15"
