[package]
name = "fuel-faucet"
version = "0.0.0"
edition = "2021"
publish = false
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/faucet"
description = "A token faucet for onboarding fuel users"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.5"
fuel-core-client = "0.24.3"
fuel-tx = "0.48.0"
fuel-types = "0.48.0"
fuels-accounts = { version = "0.59.0", features = ["coin-cache"] }
fuels-core = { version = "0.59.0" }
handlebars = "4.2"
lazy_static = "1.4"
memoize = "0.3.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls-webpki-roots"], default-features = false }
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["buffer", "limit", "load-shed", "util", "timeout"] }
tower-http = { version = "0.2.5", features = ["cors", "trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
fuel-core = { version = "0.24.3", default-features = false, features = ["test-helpers"] }
fuel-core-txpool = "0.24.3"
fuel-crypto = "0.48.0"
fuel-tx = { version = "0.48.0", features = ["test-helpers"] }
fuel-types = { version = "0.48.0", features = ["random"] }
futures = "0.3"
insta = "1.14"
rand = "0.8"
tokio = { version = "1.0", features = ["test-util"] }

[build-dependencies]
minify-html = "0.8"
